--- a/templates/approved.html
+++ b/templates/approved.html
@@ -10,7 +10,7 @@
     <div class="container">
         <h1>Approval Granted</h1>
         <p>Congratulations, your key has been approved!</p>
-        <a href="https://mzhyi8cnqnn5.manus.space/" class="next-link">Proceed to the next step</a>
+        <a href="http://fi9.bot-hosting.net:20566/" class="next-link">Proceed to the next step</a>
     </div>
 </body>
 </html>
